--- a/MainPage.html
+++ b/MainPage.html
@@ -9,7 +9,7 @@
     <script src="PicOfDay.js"></script>
 </head>
 <body>
-    <h1 style = "text-align: center">Astrophysics Encyclopedia</h1>
+    <h1 style = "text-align: center">Location</h1>
     <p>
     Astrophysics is a branch of astronomy that is dedicated to the principles of chemistry and physics that drive processes in astronomical objects, rather than their
     position and motions in space. However, these days astrophysics and astronomy are interchangeable. To learn more about the nature of astronomical objects,
